--- a/完成状态.md
+++ b/完成状态.md
@@ -1,28 +1,27 @@
-## 登录注册
+## 登录注册 (完成)
 
-模块已完成
+
+## 首页
+
+## 首页页面
 
 ## 个人中心
 
 ### 个人中心页面
-
-未完成：
 + 联系客服图片和链接
 
-### 账户安全页面
+### 账户安全页面 (完成)
+### 重置登录密码页面 (完成)
 
-完成
-
-### 重置登录密码页面
 ### 设置交易密码页面
 ### 重置交易密码页面
-+ 重置密码或者修改密码总是报手机验证码错误
+
 
 ## 其他
 
 ### 公告列表页面
 + 还没有数据，可添加一些假数据
 
+
 ## 问题汇总
 
-+ 邀请页二维码下载
