update auth info

--- a/完成状态.md
+++ b/完成状态.md
@@ -3,7 +3,20 @@
 
 ## 首页
 
-## 首页页面
+### 首页页面
++ 定存数据没有接入
+
+### 邀请好友页面
++ 第一版内容，后续调整回来
+
+### 查看推广页面
+### 推广详情页面
++ 目前仅有一代推广明细，暂无2代推广明细
+
+### 特价奖励详解
++ 接口对不上
+### 特价额度记录
++ 暂无接口
 
 ## 个人中心
 
@@ -16,6 +29,8 @@
 ### 设置交易密码页面
 ### 重置交易密码页面
 
+
+## 钱包
 
 ## 其他
 
